--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=S04T02N01
 server.port=8080
-spring.profiles.active=mongo
+spring.profiles.active=h2
 
 #spring.profiles.active=h2
 #spring.profiles.active=mysql
