--- a/src/main/resources/application-mongo.properties
+++ b/src/main/resources/application-mongo.properties
@@ -2,6 +2,6 @@ spring.application.name=S04T02N01
 server.port=8080
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=fruit_db
+spring.data.mongodb.database=fruit_bd
 spring.data.mongodb.username=sa
-spring.data.mongodb.password=1234
+spring.data.mongodb.password=teclado123
