--- a/src/main/resources/application-mongo.properties
+++ b/src/main/resources/application-mongo.properties
@@ -3,5 +3,6 @@ server.port=8080
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=fruit_bd
-spring.data.mongodb.username=sa
-spring.data.mongodb.password=teclado123
+spring.data.mongodb.username=
+spring.data.mongodb.password=
+spring.data.mongodb.uri=mongodb://localhost:27017/fruit_bd
